@@ -514,11 +514,14 @@ but also to the ones displayed in the echo area."
 			     (> message-log-max 0)
 			     (/= (length str) 0))
 		    (setq time (current-time))
-		    (with-current-buffer (get-buffer-create "*Messages*")
+		    (with-current-buffer (if (fboundp 'messages-buffer)
+					     (messages-buffer)
+					   (get-buffer-create "*Messages*"))
 		      (goto-char (point-max))
-		      (insert ,timestamp str "\n")
-		      (forward-line (- message-log-max))
-		      (delete-region (point-min) (point))
+		      (let ((inhibit-read-only t))
+			(insert ,timestamp str "\n")
+			(forward-line (- message-log-max))
+			(delete-region (point-min) (point)))
 		      (goto-char (point-max))))
 		  str)
 		 (gnus-add-timestamp-to-message
